Fix call to action mobile display

--- a/app/assets/stylesheets/spree/frontend/custom.scss
+++ b/app/assets/stylesheets/spree/frontend/custom.scss
@@ -277,3 +277,36 @@
 .intro-text-1 {
   background: #5e5e5f;
 }
+
+.call-to-action {
+  background:#0086d2;
+  padding:40px 0;
+
+  h1{
+      text-transform:uppercase;
+      color:#fff;
+      font-family:Arial;
+      font-size:40px;
+      }
+
+  .btn {
+      border-radius: 5px;
+      margin: 0px 0 0 0px;
+      font-weight:700;
+  }
+
+  .btn.btn-white {
+      background: #fff;
+      color: #666;
+      border-bottom: 4px solid #ddd;
+  }
+
+  @media (max-width: 768px) {
+      .m-text-center {text-align:center;}
+      .call-to-action h1{font-size:20px;}
+  }
+  @media (max-width: 1024px) {
+      .m-text-center {text-align:center;}
+      .call-to-action h1{font-size:25px;}
+  }
+}
